# hf-fetch-model

./: .gitignore  CHANGELOG.md  CONVENTIONS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  hf-fetch-model-roadmap.md
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
benches/: throughput.rs
docs/: FAQ.md  architecture.md  cli-reference.md  configuration.md  diagnostics.md  rust-ecosystem-comparison.md  search.md  upstream-differences.md
docs/case-studies/: README.md  gemma4-per-layer-shape-variation.md  qwen3-next-memory-forensics.md
docs/dogfooding-feedbacks/: cargo-install-silent-skip.md  hypomnesis-adoption.md
docs/issues/: README.md  candle-3401-p1.md  candle-3448-p1.md  candle-3448-p2.md  candle-3448-p3.md  candle-3448-p4.md  candle-3530-p1.md  candle-3530-p2.md  candle-3617-p1.md
docs/roadmaps/: cache-management-roadmap.md  download-performance-roadmap.md  hf-fetch-model-du-extensions-roadmap.md  hf-fetch-model-single-file-api.md  hf-fetch-npz-features-api.md  v0.10.0-roadmap.md  v0.8.0-roadmap.md  v0.8.0-v2-roadmap.md  v0.8.2-roadmap.md  v0.9.0-roadmap.md
docs/tutorials/: clean-up-before-your-disk-fills.md  inspect-before-downloading.md
examples/: basic.rs  bench.rs  candle_inspect.rs  progress.rs
src/: cache.rs  cache_layout.rs  checksum.rs  chunked.rs  chunked_state.rs  config.rs  discover.rs  download.rs  error.rs  format.rs  gpu_check.rs  http_range.rs  inspect.rs  lib.rs  plan.rs  progress.rs  repo.rs  retry.rs
tests/: cli.rs  filter.rs  integration.rs  reliability.rs  single_file.rs  verify_inspect.py  verify_inspect_remote.py
