[package]
name = "hf-fetch-model"
version = "0.9.7"
edition = "2021"
rust-version = "1.88"
description = "Download, inspect, and compare HuggingFace models from Rust. Multi-connection parallel downloads plus safetensors header inspection via HTTP Range. No weight data downloaded."
license = "MIT OR Apache-2.0"
repository = "https://github.com/PCfVW/hf-fetch-model"
homepage = "https://github.com/PCfVW/hf-fetch-model"
documentation = "https://docs.rs/hf-fetch-model"
keywords = ["huggingface", "download", "model", "machine-learning"]
categories = ["network-programming", "science"]
default-run = "hf-fetch-model"

[features]
default = []
indicatif = ["dep:indicatif"]
cli = ["dep:clap", "dep:tracing-subscriber", "indicatif"]

[dependencies]
clap = { version = "4", features = ["derive"], optional = true }
dirs = "6"
fs2 = "0.4"
globset = "0.4"
hf-hub = { version = "0.5", features = ["tokio"] }
indicatif = { version = "0.18", optional = true }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[[bin]]
name = "hf-fetch-model"
path = "src/bin/main.rs"
required-features = ["cli"]

[[bin]]
name = "hf-fm"
path = "src/bin/main.rs"
required-features = ["cli"]

[[example]]
name = "progress"
required-features = ["indicatif"]

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[lints.rust]
unsafe_code = "forbid"
elided_lifetimes_in_paths = "deny"

[lints.clippy]
# Rule 3: No panics
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"

# Rule 7: Exhaustive matching
wildcard_enum_match_arm = "deny"

# Rule 2: Explicit conversions
as_conversions = "warn"

# Rule 9: Prefer iterators
explicit_iter_loop = "warn"
manual_filter_map = "warn"
manual_find_map = "warn"
needless_range_loop = "warn"

# Rule 17: #[must_use]
must_use_candidate = "warn"

# Additional strictness
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "warn"
missing_panics_doc = "warn"

# Allow noisy pedantic lints
module_name_repetitions = "allow"
too_many_lines = "allow"
